# rag-documentation-assistant

./: .env.example  .replit  README.md  alembic.ini  app.py  cache_manager.py  config.py  document_processor.py  gunicorn.conf.py  models.py  pyproject.toml  rag_engine.py  rate_limiter.py  replit.md  routes.py
agents/: README.md  backend-architect.md  devops-engineer.md  frontend-developer.md  qa-engineer.md  rag-specialist.md  security-specialist.md
attached_assets/: Pasted--Product-Requirements-Document-PRD-Sistema-RAG-para-Documenta-o-T-cnica-1-Exec-1754509877892_1754509877893.txt
chroma_db/: chroma.sqlite3
data/: __init__.py  sample_docs.py
docs/: README.md  api-design.md  architecture.md  configuration-management.md  database-schema.md  deployment.md  document-processing.md  engineering-practices.md  environment-setup.md  monitoring-logging.md  performance-guidelines.md  project-standards.md  rag-engine.md  security-guidelines.md  testing-strategy.md
instance/: docrag.db
migrations/: env.py
migrations/versions/: 20250809_add_content_hash.py
scripts/: ingest.py
static/css/: style.css
static/js/: chat.js  prism-setup.js
templates/: base.html  chat.html  index.html
utils/: __init__.py  text_processing.py  validators.py
